# isarang-crawling

./: .gitignore  README.md  main.py  pyproject.toml
output/: nursery_list.csv
