[project]
name = "isarang-crawling"
version = "0.1.0"
description = "Crawler script for childcare.go.kr data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
